# AdvancedCpp2024

./: CMakeLists.txt  README.md
sem_01/: sem_01.md
sem_02/: CMakeLists.txt  abort.cpp  assert.cpp  conditional.cpp  conversion.cpp  fpe.cpp  incompatible.cpp  lexical.cpp  segfault.cpp  sem_02.md  syntax.cpp  table.cpp  unspecified.cpp
sem_04/: sem_04.md
